<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.stala.grzegorz.bmicalculator.MainActivity">

        <RadioGroup
            android:id="@+id/toggle"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/radio_button"
            android:checkedButton="@+id/KgMRadioButton"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/LbInRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/LbInText"
                android:textColor="@drawable/text_on_click" />

            <RadioButton
                android:id="@+id/KgMRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/KgMText"
                android:textColor="@drawable/text_on_click" />
        </RadioGroup>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonCalculate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:textSize="60sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/adviceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/resultTextView"
            android:layout_marginTop="44dp"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heightEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:onClick="onClick"
            android:text="@string/buttonText"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_alignStart="@+id/massTextView"
            android:layout_below="@+id/massTextView"
            android:layout_marginTop="35dp"
            android:text="@string/heightText"
            android:textColor="@color/green"
            android:textSize="24sp"
            tools:textStyle="bold" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_alignBottom="@+id/heightTextView"
            android:layout_alignStart="@+id/massEditText"
            android:layout_alignEnd="@+id/massEditText" />

        <EditText
            android:id="@+id/massEditText"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_above="@+id/heightTextView"
            android:layout_alignStart="@+id/buttonCalculate"
            android:layout_marginStart="45dp"
            android:layout_alignEnd="@+id/toggle" />

        <TextView
            android:id="@+id/massTextView"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginTop="43dp"
            android:text="@string/massText"
            android:textColor="@color/green"
            android:textSize="24sp"
            tools:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/toggle"
            android:layout_toStartOf="@+id/heightEditText" />


    </RelativeLayout>
</ScrollView>
